--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,6 @@
-Привет
+<title>Jija2 template</title>
+{% if name %}
+    <h1> Hello, {{ name }}!</h1>
+{%  else %}
+    <h1> Hello, world!</h1>
+{% endif %}
